--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@tanstack/router": "^0.0.1-beta.108",
     "axios": "^1.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
