--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "predeploy": "vite build --base /swapi-assignment",
     "deploy": "gh-pages -d dist",
     "build": "tsc && vite build",
-    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint src --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,10 +17,13 @@
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
     "@tanstack/router": "^0.0.1-beta.108",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
